[tool.poetry]
name = "lanzou-cloud-api"
version = "0.1.0"
description = ""
authors = ["vcheckzen"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
