[tool.poetry]
authors = ["vcheckzen"]
description = ""
name = "lanzou-cloud-api"
version = "0.1.0"

[tool.poetry.dependencies]
Flask = "2.2.2"
python = "^3.7.0"
requests = "2.28.1"
cacheout = "0.14.1"

[tool.poetry.dev-dependencies]
autopep8 = "2.0.4"
rope = "0.18.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
